@startuml it_polimi_ingsw_server_model_adventure_card
' Generated by tools/uml/generate-detailed.py. Do not edit by hand.
!pragma layout smetana
skinparam shadowing false
skinparam classAttributeIconSize 0
title it.polimi.ingsw.server.model.adventure.card

class AbandonedShipCard <<record>> {
  +resolve() : AdventureResolution
}
class AbandonedStationCard <<record>> {
  +haulSize() : int
  +resolve() : AdventureResolution
}
class CargoHandling {
  +apply() : PlayerPrompt
  +offer() : PlayerPrompt
}
class CombatLine <<record>> {
  +needsDeclaring() : boolean
}
interface CombatPenalty {
}
class LoseFlightDays <<record>> {
}
class LoseCrew <<record>> {
}
class LoseGoods <<record>> {
}
class TakeFire <<record>> {
}
class CombatZoneCard <<record>> {
  +resolve() : AdventureResolution
}
class EnemyResolution {
  -HALVES_PER_POINT : int
  -flight : Flight
  -enemyFirepowerHalves : int
  -flightDays : int
  --
  +flight() : Flight
  +rewardDescription() : String
  +claimReward() : boolean
  +punish() : void
  +applyExtra() : boolean
  +payForReward() : void
  +promptFor() : Optional<PlayerPrompt>
  +apply() : boolean
}
class EpidemicCard <<record>> {
  +resolve() : AdventureResolution
}
class MeteorSwarmCard <<record>> {
  +resolve() : AdventureResolution
}
class OpenSpaceCard <<record>> {
  +resolve() : AdventureResolution
}
class PiratesCard <<record>> {
  +resolve() : AdventureResolution
}
class PlanetsCard <<record>> {
  +planet() : Map<GoodColor, Integer>
  +resolve() : AdventureResolution
}
class SlaversCard <<record>> {
  +resolve() : AdventureResolution
}
class SmugglersCard <<record>> {
  +haulSize() : int
  +resolve() : AdventureResolution
}
class StardustCard <<record>> {
  +resolve() : AdventureResolution
}
class ThreatPattern <<record>> {
  +isMeteor() : boolean
}
class Volley {
  -ship : Ship
  -shots : List<Hit>
  -next : int
  -awaitingFragmentChoice : boolean
  --
  +nextQuestion() : Optional<PlayerPrompt>
  +apply() : void
  +isSpent() : boolean
}

CombatPenalty <|.. LoseFlightDays
CombatPenalty <|.. LoseCrew
CombatPenalty <|.. LoseGoods
CombatPenalty <|.. TakeFire
@enduml
